--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  datepicker_dropdown: ^0.0.7+4
 
 
   # The following adds the Cupertino Icons font to your application.
